Suppress illegal access warning on compile server (fix) #SCL-18193